--- a/applications/hello-kenzan/k8s/today.yaml
+++ b/applications/hello-kenzan/k8s/today.yaml
@@ -1,40 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-kenzan
+  name: hello
   labels:
-    app: hello-kenzan
+    app: hello
 spec:
   ports:
     - port: 80
       targetPort: 80
   selector:
-    app: hello-kenzan
-    tier: hello-kenzan
+    app: hello
+    tier: hello
   type: NodePort
 
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: Pods
 metadata:
-  name: hello-kenzan
+  name: hello
   labels:
-    app: hello-kenzan
+    app: hello
 spec:
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: hello-kenzan
-        tier: hello-kenzan
-    spec:
+  spec:
       containers:
-      - image: 127.0.0.1:30400/hello-kenzan:latest
-        name: hello-kenzan
+      - image: nginx
+        name: hello
         ports:
         - containerPort: 80
-          name: hello-kenzan
-  selector:
-   matchLabels:
-     app: hello-kenzan
+          name: hello
